process credit card

--- a/wp-content/plugins/woocommerce-main/readme.me
+++ b/wp-content/plugins/woocommerce-main/readme.me
@@ -1,4 +1,5 @@
-=== Cowpay For WooCommerce ===
+
+=== Cowpay For WooCommerce version 2 ===
 
 Accepts credit cards, Pay At Fawry using Cowpay services
 
@@ -11,9 +12,8 @@ Cowpay offers the following Environment options:
 2. **Production Environment**: This is the your actual environment, you should put your website into production before deploying.
 
 You can charge your customers using these methods:
-1. Credit Card
-2. Pay At Fawry
-3. Cowpay Checkout
+1. Pay At Fawry
+2. Credit Card
 
 You should enable these methods in the WooCommerce payments settings.
 
@@ -39,7 +39,7 @@ You should have the WooCommerce plugin installed and active.
 
 == Frequently Asked Questions ==
 = How to generate signature? =
-Signatures are validation tokens used by cowpay to insure the identity of the merchant beside authentication tokens starting from API v1
+Signatures are validation tokens used by cowpay to insure the identity of the merchant beside authentication tokens starting from API v2
 
 = What is merchant_reference_id Key? =
 Cowpay requires a unique id for each charge request from the merchant as each charge request represents a separated order on our system. You can use numbers, strings or combination of both.
